<resources>
    <string name="app_name">Estate Cradle</string>
    <string name="signIn_text">Have an Account? SignIn</string>
    <string name="password_string">password</string>
    <string name="cpass_string">password</string>
    <string name="register">REGISTER</string>
    <string-array name="account_type">
        <item>Landlord</item>
        <item>Renter</item>
        <item>Please Select Account Type</item>
    </string-array>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_login">Sign in</string>
    <string name="blank">%d</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">Please enter a password</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="username">Username</string>
    <string name="title_activity_tab">Estate Cradle</string>
    <string name="title_activity_Signin">SigninActivity</string>
    <string name="title_activity_signin">Sign in</string>
    <string name="title_activity_renter_home">RenterHome</string>
    <string name="rtxtDate">Text Date</string>
    <string name="tenant_name">Name</string>
    <string name="address">ADDRESS</string>
    <string name="import_from_contacts">Import from Contacts</string>
    <string name="email_address">E-mail Address</string>
    <string name="tenant_phone_number">Phone Number</string>
    <string name="select_lease_date">Select Lease Date</string>
    <string name="property_type">Property Type</string>
    <string name="date_of_join">Date of Join</string>
    <string name="fill_out_an_empty_form">Fill out an Empty Form</string>
    <string name="how_would_you_like_to_add_tenant">How would you like to add Tenant?</string>
    <string name="manage_your_projects">Manage your projects</string>
    <string name="add_a_property">Add a Property</string>
    <string name="save">SAVE</string>
    <string name="title_activity_add_reminder">Add Reminder</string>
    <string name="title_activity_edit_reminder">Edit Reminder</string>
    <string name="title_activity_about">About</string>
    <string name="add_reminder">Reminder</string>
    <string name="details">Details</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="repeat">Repeat</string>
    <string name="repeat_off">Off</string>
    <string name="repeat_no">Repetition Interval </string>
    <string name="repeat_type">Type of Repetitions</string>
    <string name="action_discard_reminder">Discard Reminder</string>
    <string name="action_save_reminder">Save Reminder</string>
    <string name="toast_mark_as_done">Marked next reminder as done</string>
    <string name="no_reminders">Click on the plus button below to begin creating your reminders!</string>
    <string name="renter_name">Renter Name</string>
    <string name="existing_date">Existing Date</string>
    <string name="alarm_date">Alarm Date</string>
    <string name="listing_name">Listing name</string>
    <string name="view_listings">View Listings</string>
    <string name="cancel">cancel</string>
    <string name="more_details">Details...</string>
    <string name="add_image">Add Image</string>
    <string name="title_activity_display_image">DisplayImage</string>
    <string name="image_information">Image Information</string>
    <string name="menu_item_image">Add Image</string>
    <string name="menu_item_uninstall">Remove App</string>
    <string name="about_" formatted="false">About</string>
    <string name="about_hint" formatted="false">About this app</string>
    <string name="faq_hint" formatted="false">Some tips and tricks, how to set up this app.</string>
    <string name="feedback_" formatted="false">Feedback</string>
    <string name="feedback_hint" formatted="false">Report bugs, request features ...</string>
    <string name="google_plus_hint" formatted="false">Follow me on Google+.\nGet update notifications etc.</string>
    <string name="about0" formatted="false">SMSdroid lets you read your sms and write sms with any other app.</string>
    <string name="more_apps_" formatted="false">More Apps..</string>
    <string name="settings" formatted="false">Preferences</string>
    <string name="new_message_" formatted="false">New message</string>
    <string name="new_message" formatted="false">1 unread message.</string>
    <string name="new_messages_" formatted="false">New messages</string>
    <string name="new_messages" formatted="false">%d unread messages.</string>
    <string name="call" formatted="false">Call</string>
    <string name="reply" formatted="false">Reply</string>
    <string name="send_" formatted="false">Send</string>
    <string name="notification_" formatted="false">Notifications</string>
    <string name="notification_enable_" formatted="false">Enable notifications</string>
    <string name="notification_enable_hint" formatted="false">Enable notifications on receive</string>
    <string name="receive_vibrate_" formatted="false">Vibrate</string>
    <string name="receive_vibrate_hint" formatted="false">Vibrate on receive</string>
    <string name="receive_vibrate_mode_" formatted="false">Vibrator mode</string>
    <string name="receive_sound_" formatted="false">Sound</string>
    <string name="receive_sound_hint" formatted="false">Sound on receive</string>
    <string name="receive_led_color_" formatted="false">LED color</string>
    <string name="receive_led_flash_" formatted="false">LED mode</string>
    <string name="receive_led_flash_hint" formatted="false">Set LED flashing behaviour</string>
    <string name="receive_no_text_" formatted="false">Hide sender/text</string>
    <string name="receive_no_text_hint" formatted="false">Hide sender/text in notification.</string>
    <string name="behavior_" formatted="false">Behavior</string>
    <string name="autosend_" formatted="false">Autosend</string>
    <string name="appearance_and_behavior_" formatted="false">Appearance &amp; behavior</string>
    <string name="autosend_hint" formatted="false">Send answers automatically. Currently only WebSMS supports this feature. Other apps will just show the text.</string>
    <string name="show_text_field_" formatted="false">Show text field</string>
    <string name="show_text_field_hint" formatted="false">Show text field instead of answer button.</string>
    <string name="show_target_app_" formatted="false">Show target app</string>
    <string name="show_target_app_hint" formatted="false">Show target App used for sending on \"send\" Button.</string>
    <string name="appearance_" formatted="false">Appearance</string>
    <string name="theme_" formatted="false">Theme</string>
    <string name="textsize_" formatted="false">Text size</string>
    <string name="textsize_hint" formatted="false">Text size in pixels; leave empty for default</string>
    <string name="textcolor_" formatted="false">Text color</string>
    <string name="textcolor_hint" formatted="false">Message text\'s color.</string>
    <string name="textcolor_ignore_conv_" formatted="false">Ignore text color for threads</string>
    <string name="textcolor_ignore_conv_hint" formatted="false">Ignore text color in list of threads.</string>
    <string name="show_contact_photo_" formatted="false">Show photo</string>
    <string name="show_contact_photo_hint" formatted="false">Show contact\'s photo in conversation list</string>
    <string name="show_emoticons_" formatted="false">Show emoticons</string>
    <string name="show_emoticons_hint" formatted="false">Show emoticons in message list.</string>
    <string name="hide_send_" formatted="false">Hide "send" button</string>
    <string name="hide_send_hint" formatted="false">Hide "send" button near text field.</string>
    <string name="hide_restore_" formatted="false">Hide "restore last message" button</string>
    <string name="hide_restore_hint" formatted="false">Hide "restore last message" button in message list.</string>
    <string name="hide_paste_" formatted="false">Hide "paste" button</string>
    <string name="hide_paste_hint" formatted="false">Hide "paste" button on text field.</string>
    <string name="hide_widget_label_" formatted="false">Hide widget\'s label</string>
    <string name="hide_widget_label_hint" formatted="false">Hide the label of the widget.</string>
    <string name="hide_delete_all_threads_" formatted="false">Hide delete all threads</string>
    <string name="hide_delete_all_threads_hint" formatted="false">Hide delete all threads menu option.</string>
    <string name="hide_message_count_" formatted="false">Hide message counts</string>
    <string name="hide_message_count_hint" formatted="false">Hide message counts on conversation list.</string>
    <string name="show_full_date_" formatted="false">Show full date</string>
    <string name="show_full_date_hint" formatted="false">Show full date and time on every message.</string>
    <string name="me" formatted="false">Me</string>
    <string name="view_contact_" formatted="false">View contact</string>
    <string name="add_contact_" formatted="false">Add to contacts</string>
    <string name="view_thread_" formatted="false">View thread</string>
    <string name="filter_spam_" formatted="false">Mark as Spam</string>
    <string name="dont_filter_spam_" formatted="false">Remove from Blacklist</string>
    <string name="delete_message_" formatted="false">Delete message</string>
    <string name="delete_thread_" formatted="false">Delete thread</string>
    <string name="forward_" formatted="false">Forward</string>
    <string name="send_draft_" formatted="false">Send draft</string>
    <string name="copy_text_" formatted="false">Copy message text</string>
    <string name="view_details_" formatted="false">View message details</string>
    <string name="delete_threads_" formatted="false">Delete all threads</string>
    <string name="mark_all_read_" formatted="false">Mark all as read</string>
    <string name="mark_read_" formatted="false">Mark read</string>
    <string name="mark_unread_" formatted="false">Mark unread</string>
    <string name="message_options_" formatted="false">Message options</string>
    <string name="delete_message_question" formatted="false">Do you really want to delete this message?</string>
    <string name="delete_thread_question" formatted="false">Do you really want to delete <b>all messages of this thread</b>?</string>
    <string name="delete_threads_question" formatted="false">Do you really want to delete <b>all messages</b>?</string>
    <string name="from_" formatted="false">From:</string>
    <string name="to_" formatted="false">To:</string>
    <string name="messages">Messages</string>
    <string name="add_tenant">Add Tenant</string>
    <string name="setup_reminders_and_notifications">Setup Reminders and Notifications</string>
    <string name="create_tenant_list_for_custom_reminders">Create Tenant List, for Custom Reminders</string>
    <string name="view_your_tenants">View your Tenant list</string>
    <string name="chat_with_tenants">Chat with Tenants</string>
    <string name="view_tenants">View Tenants</string>
    <string name="set_reminders">Set Reminders</string>
    <string name="new_here_register">New Here? Register</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="tenant_icon">tenant_icon</string>
    <string name="house_no">House No.</string>
</resources>