<?xml version="1.0" encoding="utf-8"?>
<menu
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/item_compose"
            android:title="@string/new_message_"
            android:icon="@drawable/ic_menu_compose"
            app:showAsAction="always|never"/>
    <item
            android:id="@+id/item_mark_all_read"
            android:title="@string/mark_all_read_"
            android:icon="@drawable/ic_menu_mark"
            app:showAsAction="ifRoom|never"/>
    <item
            android:id="@+id/item_delete_all_threads"
            android:title="@string/delete_threads_"
            android:icon="@android:drawable/ic_menu_delete"/>
    <item
            android:id="@+id/item_settings"
            android:title="@string/settings"
            android:icon="@android:drawable/ic_menu_preferences"/>
    <!--<item
            android:id="@+id/item_donate"
            android:title="@string/donate_remove_ads_"
            android:icon="@drawable/ic_menu_star"/> -->

</menu>