<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.brianb.demo1.SigninActivity"
    android:background="@drawable/sunset_small">
    <ImageView
        android:layout_width="130dp"
        android:layout_marginTop="80dp"
        android:layout_height="140dp"
        android:src="@drawable/logo"
        />

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textSize="16sp"
                    android:singleLine="true"
                    android:padding="5dp"
                    android:background="#f0ffffff"
                    android:drawablePadding="8dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:drawableLeft="@drawable/usr1"
                    />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:hint="@string/prompt_password"
                    android:background="#f0ffffff"
                    android:fontFamily="serif"
                    android:imeActionId="@+id/login"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:drawableLeft="@drawable/pass1"
                    android:drawablePadding="8dp"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="16sp"
                    />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:fontFamily="cursive"
                android:textColor="@color/pureWhite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="80dp"
                android:layout_marginRight="80dp"
                android:text="@string/action_sign_in"
                android:textSize="18sp"
                android:textStyle="bold"
                android:onClick="onSignin"
                android:background="#2196cc"
                android:clickable="true"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/toSignUp"
                android:text="@string/new_here_register"
                android:gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:textColor="#fb30c607"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/forgotPassword"
                android:text="@string/forgot_password"
                android:gravity="center_horizontal"
                android:textColor="@color/pureWhite"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
