<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    >
   <ScrollView
       android:layout_width="match_parent"
       android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
    <RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/renterImage"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:src="@drawable/choice_add_use"
            android:layout_margin="@dimen/activity_horizontal_margin" />
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/btnSelectImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:src="@android:drawable/ic_menu_gallery"
            android:layout_alignBottom="@+id/renterImage"
            android:layout_alignRight="@+id/renterImage"
            android:layout_alignEnd="@+id/renterImage" />
</RelativeLayout>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:id="@+id/renterName"
        android:textSize="22sp"
        android:hint="@string/tenant_name"/>
    <EditText
        android:layout_width="match_parent"
        android:hint="@string/tenant_phone_number"
        android:textSize="22sp"
        android:layout_height="wrap_content"
        android:id="@+id/renterPhone"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/renterEditDate"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/select_lease_date"
            android:inputType="datetime"
            android:maxLines="1"
            android:paddingEnd="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingStart="5dp" />

        <ImageButton
            android:id="@+id/rbtnDate"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/renterEditDate"
            android:onClick="onShowDate"
            android:layout_alignRight="@+id/renterEditDate"
            android:layout_alignTop="@+id/renterEditDate"
            android:background="@drawable/calendar_icon"
            android:contentDescription="@string/date_of_join"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#f0ffffff"
        android:layout_marginTop="10dp"
        android:paddingTop="10dp"
        android:padding="0dp"
        >
        <Spinner
            android:id="@+id/spinner_renterAddress"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:spinnerMode="dropdown"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:background="#f0ffffff"
        android:layout_marginTop="10dp"
        android:paddingTop="10dp"
        android:padding="0dp"
        >
        <Spinner
            android:id="@+id/spinner_renterHouseNumber"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:spinnerMode="dropdown"
            />
    </RelativeLayout>
    <EditText
        android:layout_width="match_parent"
        android:hint="@string/email_address"
        android:textSize="22sp"
        android:layout_height="wrap_content"
        android:id="@+id/renterEmail"
        android:inputType="textEmailAddress"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/saveTenant"
            android:onClick="onSaveTenant"
            android:text="@string/save"
            android:layout_weight="1"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cancelTenant"
            android:text="CANCEL"
            android:layout_weight="1"/>
    </LinearLayout>
    </LinearLayout>
   </ScrollView>
</LinearLayout>
