<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/notification_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:clipChildren="false"
    android:foreground="?android:attr/selectableItemBackground"
    android:transitionName="cardTransition"
    card_view:cardCornerRadius="3dp"
    card_view:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/renterRowIcon"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:contentDescription="@string/tenant_icon"
            android:src="@drawable/user_add" />
        <!--<TextView
            android:id="@+id/renterRowHouseNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="1"
            android:textSize="18sp" /> -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_weight="0.6"
            android:orientation="vertical">

            <TextView
                android:id="@+id/renterRowName"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:gravity="center"
                android:text="Justin Timberlake"
                android:textColor="@color/colorAccent"
                android:textAllCaps="true"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/renterRowAddress"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/address"
                android:gravity="start|center"
                android:textColor="@color/darkGreen"
                android:textSize="18sp"
                 />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/renterRowDate"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:gravity="center"
                android:text="@string/date_of_join"
                android:textColor="@color/colorPrimaryFair"
                android:textSize="15sp" />
            <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/house_no"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                android:gravity="start|center"
                android:textStyle="italic"/>
            <TextView
                android:id="@+id/renterRowHseNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1"
                android:textStyle="italic|bold"
                android:gravity="start|center"
                android:textSize="17sp" />
            </LinearLayout>

            </LinearLayout>

        </LinearLayout>

</android.support.v7.widget.CardView>


